# webarena

./: .envrc  .gitignore  .pre-commit-config.yaml  .style.yapf  CITATION.cff  NEW_AMI_README.md  PR_UPDATE.md  README.md  WEBARENA_DEPLOYMENT_GUIDE.md  check_errors.sh  cot_300_res.txt  create-webarena-ami-with-map-fix.sh  deploy-canonical.sh  deploy-local.sh  deploy-s3-direct.sh  deploy-s3-pbf.sh  flake.nix  minimal_example.py  parallel_run.sh  pyproject.toml  rci_300_res.txt  requirements.txt  run.py  setup.cfg  setup.py  setup_env.sh  setup_urls.sh  test-ids.json  test-new-ami.sh  webarena-boot-init.sh  webarena-frontend-map-config.yaml  webarena-map-backend-boot-init.yaml
.github/workflows/: pre-commit.yml  tests.yml
.openhands/: TASKS.md
.secrets/: webarena-map-key-new.pem
agent/: agent.py  chris_agent.py  utils.py
agent/prompts/: prompt_constructor.py  to_json.py
browser_env/: __init__.py  actions.py  async_envs.py  async_processors.py  auto_login.py  env_config.py  envs.py  helper_functions.py  processors.py  utils.py  web_things.py
config_files/: test.raw.json
environment_docker/: README.md
environment_docker/webarena-homepage/: app.py
evaluation_harness/: evaluate_by_trace.py  evaluators.py  helper_functions.py
llms/: __init__.py  lm_config.py  tokenizers.py  utils.py
llms/providers/: __init__.py  hf_utils.py  openai_utils.py
resources/: README.md
scripts/: check_error_runs.py  collect_obs.py  generate_test_data.py  generate_test_data_hosting.py  html2json.py  web-arena-zeno.ipynb  webarena-zeno.ipynb
tests/: conftest.py
tests/test_browser_env/: test_action_functionalities.py  test_actions.py  test_auth_cookie.py  (+2 more)
(+22 files in other folders)
