[metadata]
name = webarena

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[options.extras_require]
dev =
    pre-commit==3.0.1
    pytest==7.1.2
    mypy==0.991
    nbmake
    pytest-asyncio
    types-requests
    types-setuptools
    types-flask

[options]
python_requires = >=3.7, <4
packages =
    browser_env
    agent
    evaluation_harness
    llms
[mypy]
strict = true
exclude = (?x)(^environment_docker/.*$|^setup\.py$)

[mypy-text_generation.*]
ignore_missing_imports = true

[mypy-transformers.*]
ignore_missing_imports = true

[mypy-aiolimiter.*]
ignore_missing_imports = true

[mypy-openai.error.*]
ignore_missing_imports = true

[mypy-nltk.*]
ignore_missing_imports = true
